# flint

./: .gitignore  ACCESS_MODES_COMPLETE.md  ALL_TESTS_PASSING.md  BENCHMARK_INSTRUCTIONS.md  BITMAP_ANALYSIS.md  BLOBSTORE_CLEAN_SHUTDOWN_FIX.md  BYTE_BY_BYTE_ANALYSIS.md  CHANGELOG.md  CLEAN_BUILD_TEST_REPORT.md  CLUSTER_CONFIGURATION.md  CODE_PATH_DIAGRAM.md  CONTROLLER_API_ANALYSIS.md  CRITICAL_BUG_FOUND.md  CRITICAL_FINDING.md  CSI_LIFECYCLE_OBSERVATIONS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DASHBOARD_API_TIMEOUT_FIX.md  DASHBOARD_INTEGRATION.md  DEBUG_SESSION_FINDINGS.md  DEFENSIVE_CLEANUP_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_TEST_RESULTS.md  DEPLOY_FLUSH_FIX.md  DEVICE_IDENTIFICATION_ROADMAP.md  DISK_MANAGEMENT.md  DOCS_TO_KEEP.txt  DOCUMENTATION_INDEX.md  DS_PARALLEL_IO_PLAN.md  ENOTDIR_FIX_SUMMARY.md  ENOTDIR_FIX_TESTING_GUIDE.md  FFLV4_IMPLEMENTATION_PLAN.md  FFLV4_STATUS.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_HONEST_ASSESSMENT.md  FINAL_MOUNT_DIAGNOSTIC.md  FINAL_SESSION3_SUMMARY.md  (+206 more)
spdk-csi-driver/: .dockerignore  AUTOMATIC_RAID_PROVISIONING.md  Cargo.toml  GENERATION_TRACKING_IMPLEMENTATION.md  GENERATION_TRACKING_QUICKSTART.md  README.adoc  SPDK_RPC_INTEGRATION.md  XATTR_GENERATION_TRACKING.md  blob-recovery-batch-SIMPLEST.patch  blob-recovery-batched.patch  blob-recovery-complete.patch  blob-recovery-detailed.patch  blob-recovery-optimized.patch  blob-recovery-progress.patch  blob-shutdown-debug.patch  build.rs  clippy.toml  disable-per-io-daemon.patch  lvol-flush-sync.patch  lvol-flush.patch  lvol-xattr-rpc.patch  nvmf-hostlog.patch  raid-skip-rebuild.patch  spdk-csi-dashboard.tsx  thread-shutdown-timeout.patch  ublk-debug.patch  vhost_deployment.txt  wrapper.h
spdk-csi-driver/docker/: BUILD_COMPARISON.md  Dockerfile.c6gates  Dockerfile.controller  Dockerfile.csi  Dockerfile.csi-prebuilt  Dockerfile.csi.prebuilt  Dockerfile.dashboard-backend  Dockerfile.node-agent  Dockerfile.node-agent-embedded  Dockerfile.pnfs  Dockerfile.pnfs-ds  Dockerfile.pnfs-mds  Dockerfile.spdk  Dockerfile.spdk-benchmark  Dockerfile.spdk-benchmark-c  Dockerfile.spdk-malloc-benchmark  Dockerfile.spdk_fix  Dockerfile.spdk_kind  Dockerfile.spdk_simple  README-pnfs.md  spdk-csi-start-kind.sh  ublk-per-io-daemon.patch
spdk-csi-driver/docs/: NFSV4_IMPLEMENTATION_PLAN.md  NFSV4_IMPLEMENTATION_STATUS.md  NFSV4_INTEGRATION_NEXT_STEPS.md  NFSV4_PROGRESS_SUMMARY.md  NFSV4_SESSION_PROGRESS.md  NFSV4_TODOS_COMPLETED.md  NLM_NEXT_STEPS.md  NLM_TESTING.md  RESERVED_DEVICES_IMPLEMENTATION.md  RFC7862_COMPLIANCE.md  UnansweredOn7b.md  attach-detach-campaign-2026-07.md  attach-detach-robustness-contract.md  cluster-restart-drill-2026-07-04.md  dashboard-ui-reserved-devices.md  disk-setup-ui-with-reservation.md  e2e-campaign-2026-06-12.md  f26-filehandle-cache-redesign.md  f36c-assembly-freshness-gate.md  f38-reentry-export-drop.md  f43-rwx-replacement-admission.md  incremental-replica-rebuild-review.md  incremental-replica-rebuild.md  phase0-hazard-repro-2026-06-10.md  phase6-residual-2026-06-12.md  real-world-use-cases-direct-spdk.md  remote-x86-build-node.md  reserved-devices-integration.md  tier2-evaluation-2026-06-12.md  tier2-operator-runbook.md  tier2-spike-2026-06-12.md
spdk-csi-driver/helm/: chart.txt
spdk-csi-driver/proto/: pnfs_control.proto
spdk-csi-driver/scripts/: build-all.sh  build-dashboard.sh  build-embedded.sh  build.sh  setup-nodes.sh  tier2-spike.sh
spdk-csi-driver/spdk-benchmark/: Cargo.toml  QUICKSTART.md  README.md  build.rs  build.sh  wrapper.h
spdk-csi-driver/spdk-benchmark-c/: Makefile  Makefile.malloc  benchmark.c  benchmark_malloc.c
spdk-csi-driver/spdk-benchmark/src/: main.rs
spdk-csi-driver/src/: capacity_cache.rs  catchup.rs  controller.rs  controller_operator.rs  controller_reap.rs  csi_snapshotter.rs  cutover.rs  dashboard_auth.rs  driver.rs  driver_backup.rs  enhanced_migration_api.rs  epoch_scheduler.rs  fast_attach_implementation.rs  freshness_gate.rs  generation_tracking.rs  guarded_destroy.rs  hot_rejoin.rs  hybrid_controller.rs  identity.rs  lib.rs  main.rs  migration_api_endpoints.rs  minimal_disk_service.rs  minimal_models.rs  models.rs  mount_util.rs  nfs_ds_main.rs  nfs_main.rs  nfs_mds_main.rs  node.rs  node_agent.rs  node_volume_locks.rs  nvme_recovery.rs  nvmeof_export.rs  nvmeof_export_manager.rs  nvmeof_utils.rs  orphan_sweep.rs  pnfs_csi.rs  pnfs_csi_cli_main.rs  reliable_attach_implementation.rs  (+15 more)
spdk-csi-driver/src/nfs/: OPTIMIZATION_ELIMINATE_COPYING.md  OPTIMIZATION_REDUCE_RPC_ROUNDTRIPS.md  fence.rs  filehandle.rs  handlers.rs  kerberos.rs  kerberos_native.rs  lock_manager.rs  mod.rs  nlm.rs  pipeline.rs  portmap.rs  protocol.rs  rpc.rs  rpcsec_gss.rs  server.rs  server_v4.rs  setattr.rs  tests.rs  vfs.rs  volume_marker.rs  xdr.rs
spdk-csi-driver/src/node_agent/: disk_discovery.rs  health_monitor.rs  http_api.rs  mod.rs  nvmeof_manager.rs  raid_operations.rs  rpc_client.rs
spdk-csi-driver/src/pnfs/: compound_wrapper.rs  config.rs  context.rs  exchange_id.rs  grpc.rs  handler_trait.rs  mod.rs  protocol.rs
spdk-csi-driver/src/raid/: mod.rs  raid_models.rs  raid_service.rs
spdk-csi-driver/src/snapshot/: mod.rs  (+6 more)
spdk-csi-driver/tests/: compound_encoding_test.rs  delegation_test.rs  ds_sequence_test.rs  getattr_encoding_test.rs  layoutget_encoding_test.rs  nfs4_attribute_ids_test.rs  nfs_client_test.rs  nfs_conformance_test.rs  readdir_encoding_test.rs  readdir_filesystem_test.rs  reproduce_enotdir_test.rs  secinfo_encoding_test.rs  secinfo_wire_format_test.rs  server_caps_encoding_test.rs  server_caps_getattr_test.rs  verify_attr_len_test.rs
spdk_flint/: CMakeLists.txt  Dockerfile  Makefile  README.md  test-dashboard.sh
spdk_flint/docker/: Dockerfile.base  Dockerfile.csi-controller  Dockerfile.csi-node  Dockerfile.dashboard-backend  Dockerfile.node-agent  README.md  build-images.sh
spdk_flint/include/: app.hpp  logging.hpp
spdk_flint/src/: app.cpp  logging.cpp  main.c  main.cpp
spdk_flint/test/: CMakeLists.txt  test_main.cpp
(+1033 files in other folders)
