[package]
name = "flint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
prost = "0.12.6"
prost-types = "0.12.6"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots", "transport"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
