[package]
name = "spdk-csi-driver"
version = "0.4.0"
edition = "2021"

# Old CRD-based controller operator - disabled in minimal state
# [[bin]]
# name = "controller" 
# path = "src/controller_operator.rs"

[[bin]]
name = "csi-driver"
path = "src/main.rs"

[[bin]]
name = "flint-nfs-server"
path = "src/nfs_main.rs"

[[bin]]
name = "nfs-test-client"
path = "tests/nfs_client_test.rs"

# pNFS binaries (experimental)
[[bin]]
name = "flint-pnfs-mds"
path = "src/nfs_mds_main.rs"

[[bin]]
name = "flint-pnfs-ds"
path = "src/nfs_ds_main.rs"

# Removed old binaries:
# - node-agent: now a library module, not standalone binary
# - spdk-dashboard-backend: replaced by spdk_dashboard_backend_minimal.rs

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kube = { version = "0.87", features = ["client", "runtime"] }
k8s-openapi = { version = "0.20", features = ["latest"] }
# Removed schemars - no longer needed without CRD schema generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
warp = "0.3"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
regex = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
bytes = "1.0"
async-trait = "0.1"
nix = { version = "0.27", features = ["fs", "user"] }
thiserror = "1.0"
rand = "0.8"
dashmap = "6.1"  # Lock-free concurrent HashMap for high-performance state management
sha2 = "0.10"
crossbeam = "0.8"  # Lock-free channels and queues
# Note: Pure Rust Kerberos crates exist but are not yet production-ready
# For now, we implement a minimal placeholder acceptor that can be enhanced later

# SPDK Integration - Custom bindings generated for Flint's specific needs
# No external dependencies - bindings generated from your SPDK v25.05 installation

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[lib]
name = "spdk_csi_driver"
path = "src/lib.rs"
